unit test user et product
